[package]
name = "gtuber-sys"
version = "0.0.1"
edition = "2018"
build = "build.rs"
[package.metadata.system-deps.gtuber_0_0]
name = "gtuber-0.0"
version = "0"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gtuber_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "5"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
